[package]
name = "dipse"
description = "Directory Independent Project Script Executor"
license = "GPL-3.0"
repository = "https://github.com/DevHyperCoder/dipse.git"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
dirs = "4.0"
